--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="box-img-header">
 
-            <img class="img-logo" src="../Img/pngwing.com (9).png" alt="logo WK">
+            <a href="/"><img class="img-logo" src="../Img/pngwing.com (9).png" alt="logo WK"></a>
 
         </div>
 
