att efects page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../Css/style.css">
-    <title>Document</title>
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <title>Landing Page | WK</title>
 </head>
 
 <header>
@@ -245,6 +246,8 @@
         </div>
 
     </footer>
+
+    <script src="Js/main.js"></script>
 </body>
 
 </html>
