att efects page

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         <section id="experiences" class="secondSection">
 
-            <h2 class="title">Experiencias</h2>
+            <h2 class="title">Experiências</h2>
 
             <div class="cards-container">
                 <div class="card">
